Mon Aug 12 12:35:53 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Extended bcc32 instructions

Mon Aug 12 07:24:33 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/Gateway/Gateway/Event_Channel.cpp:
          Added cast to resolve bcc32 warning

        * protocols/ace/INet/StreamHandler.h:
        * protocols/ace/INet/StreamHandler.cpp:
          Changed char_size argumen to size_t to resolve bcc32 warnings

        * protocols/tests/RMCast/Receiver.cpp:
          Added cast to resolve bcc32 warning

Sat Aug 10 17:10:03 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Compression/rle/RLECompressor.cpp:
          Disable warning with bcc32

        * tests/Compiler_Features_22_DLL.h:
          Add include pre/post.h

Fri Aug  9 17:57:43 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/post.h:
        * ace/pre.h:
          Disable warning 8127 with Embarcadero C++ BuilderXE4, it is
          given incorrectly and reported as QC 117740.

Fri Aug  9 17:46:31 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-linux.h:
          Use C++ casts instead of C-style casts for ACE_DEFAULT_BASE_ADDR.
          This fixes bugzilla 4113, thanks to Yogesh Sharma
          <Yogesh dot Sharma at saabsensis dot com> for reporting this and
          supplying the patch

Fri Aug  9 16:53:17 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-linux.h:
          Linux kernel 2.5.8 and newer have sched_getaffinity and
          sched_getaffinity

Fri Aug  9 14:27:56 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_22_DLL.h:
        * tests/Compiler_Features_22_DLL.cpp:
        * tests/Compiler_Features_22_DLL_Export.h:
        * tests/tests.mpc:
          New test for template method specialization combined with
          dllexport

Fri Aug  9 08:30:41 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
