@@ -3,9 +3,9 @@
 #include "RLECompressor.h"
 #include "ace/OS_NS_string.h"
 
-#if defined (__BORLANDC__)
+#if defined (__BORLANDC__) && (__BORLANDC__ <= 0x660)
 #  pragma option push -w-8072
-# endif
+#endif
 
 ACE_BEGIN_VERSIONED_NAMESPACE_DECL
 
@@ -161,6 +161,6 @@ ACE_RLECompressor::decompress( const void *in_ptr,
 // Close versioned namespace, if enabled by the user.
 ACE_END_VERSIONED_NAMESPACE_DECL
 
-#if defined (__BORLANDC__)
+#if defined (__BORLANDC__) && (__BORLANDC__ <= 0x660)
 # pragma option pop
 #endif
